--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,4 @@
-<p id="notice"><%= notice %></p>
+ <p id="notice"><%= notice %></p>
 
 <h1>Articles</h1>
 
@@ -16,10 +16,12 @@
       <tr>
         <td><%= article.title %></td>
         <td><%= article.content %></td>
+        <td><%= link_to 'Show', article %></td>
++        <td><%= link_to 'Edit', edit_article_path(article) %></td>
       </tr>
     <% end %>
   </tbody>
-</table>
+ </table>
 
 <br>
 
