--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,13 +1,15 @@
-<p id="notice"><%= notice %></p>
+ <p id="notice"><%= notice %></p>
 
 <p>
   <strong>Title:</strong>
   <%= @article.title %>
-</p>
+ </p>
 
 <p>
   <strong>Content:</strong>
   <%= @article.content %>
-</p>
+ </p>
 
-<%= link_to 'Back', articles_path %>
+
++ <%= link_to 'Edit', edit_article_path(@article) %> |
+ <%= link_to 'Back', articles_path %>
