--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,5 +1,5 @@
-<h1>Editing Article</h1>
+<h1>記事編集</h1>
 
 <%= render 'form', article: @article %>
-<%= link_to 'Show', @article %> |
-<%= link_to 'Back', articles_path %>
+<%= link_to '詳細', @article %> |
+<%= link_to '一覧', articles_path %>
