--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,9 +1,7 @@
-app/views/articles/index.html.erb
 <p id="notice"><%= notice %></p>
 
-<h1>記事</h1>
-
-<%= link_to '記事作成', new_article_path, class: "btn btn-info" %>
+<h1>Articles</h1>
+<%= link_to 'New Article', new_article_path, class: "btn btn-info" %>
 
 <table class="table">
   <thead>
@@ -15,12 +13,17 @@ app/views/articles/index.html.erb
   <tbody>
     <% @articles.each do |article| %>
       <tr>
-        <td><%= article.title %></td>
+        <td>
+          <%= article.title %>
+          <% article.tags.each do |tag| %>
+            <span class="badge rounded-pill bg-primary"><%= tag.name %></span>
+          <% end %>
+        </td>
         <td><%= article.content %></td>
-        <td class="hstack gap-3">
-          <%= link_to '詳細', article, class: "btn btn-success mr-1" %>
-          <%= link_to '編集', edit_article_path(article), class: "btn btn-warning" %>
-          <%= button_to '削除', article, class: "btn btn-danger", method: :delete %>
+        <td>
+          <%= link_to 'Show', article, class: "btn btn-success" %>
+          <%= link_to 'Edit', edit_article_path(article), class: "btn btn-warning" %>
+          <%= link_to 'Destroy', article, class: "btn btn-danger", method: :delete, data: { confirm: 'Are you sure?' } %>
         </td>
       </tr>
     <% end %>
