--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,9 +1,8 @@
-<p id="notice"><%= notice %></p>
+ <p id="notice"><%= notice %></p>
 
-<h1>Articles</h1>
-<%= link_to 'New Article', new_article_path, class: "btn btn-info" %>
-
-<table class="table">
+<h1>記事</h1>
++ <%= paginate @articles %>
+ <table class="table">
   <thead>
     <tr>
       <th scope="col">タイトル</th>
@@ -13,19 +12,12 @@
   <tbody>
     <% @articles.each do |article| %>
       <tr>
-        <td>
-          <%= article.title %>
-          <% article.tags.each do |tag| %>
-            <span class="badge rounded-pill bg-primary"><%= tag.name %></span>
-          <% end %>
-        </td>
+        <td><%= article.title %></td>
         <td><%= article.content %></td>
         <td>
-          <%= link_to 'Show', article, class: "btn btn-success" %>
-          <%= link_to 'Edit', edit_article_path(article), class: "btn btn-warning" %>
-          <%= link_to 'Destroy', article, class: "btn btn-danger", method: :delete, data: { confirm: 'Are you sure?' } %>
+          <%= link_to '詳細', article, class: "btn btn-success" %>
         </td>
       </tr>
     <% end %>
   </tbody>
-</table>
+ </table>
